# cppcnn

./: CMakeLists.txt  README.md  cppnn.cpp
cmake/: eigen.cmake
nn/: CIFAR.cpp  CIFAR.h  Layer.h  MNIST.cpp  MNIST.h  Network.cpp  Network.h  utils.h
nn/Layer/: AvePooling.cpp  AvePooling.h  Conv.cpp  Conv.h  FullyConnected.cpp  FullyConnected.h  MaxPooling.cpp  MaxPooling.h  ReLU.cpp  ReLU.h  Sigmoid.cpp  Sigmoid.h  Softmax.cpp  Softmax.h  Square.cpp  Square.h
test/: CMakeLists.txt  ConvTest.cpp  FCTest.cpp  InferenceTest.cpp  common.h
